--- a/src/components/_layout/_footer.pug
+++ b/src/components/_layout/_footer.pug
@@ -7,11 +7,10 @@ footer
 			.list-social-media.col-md-6
 				p Chia sẻ liên kết
 				ul
+					li#facebook
+						img.svg(src="./assets/images/icons/facebook.svg", alt="", srcset="")
 					li
-						a(href="#")
-							img.svg(src="./assets/images/icons/facebook.svg", alt="", srcset="")
-					li
-						a(href="#")
+						a.twitter-share-button(href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-text="Cùng than gia sự kiện nhé" data-url="http://vliveawards.com/" data-lang="vi" data-show-count="false")
 							img.svg(src="./assets/images/icons/twitter.svg", alt="", srcset="")
 					li
 						a(href="#")
