--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -43,6 +43,9 @@
 								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 							figcaption
 								h5 TÊN CA SĨ
+								.number-vote
+									p Tổng số lượt
+									p 10
 	.container.block-vote
 		.title
 			h3 BEST COMEBACK
@@ -58,6 +61,9 @@
 								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 							figcaption
 								h5 TÊN CA SĨ
+								.number-vote
+									p Tổng số lượt
+									p 10
 	.container.block-vote
 		.title
 			h3 BEST COMEBACK
@@ -73,6 +79,9 @@
 								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 							figcaption
 								h5 TÊN CA SĨ
+								.number-vote
+									p Tổng số lượt
+									p 10
 	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
@@ -86,6 +95,9 @@
 								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 							figcaption
 								h5 TÊN CA SĨ
+								.number-vote
+									p Tổng số lượt
+									p 10
 	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
@@ -99,6 +111,9 @@
 								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 							figcaption
 								h5 TÊN CA SĨ
+								.number-vote
+									p Tổng số lượt
+									p 10
 	.container.block-vote
 		.title
 			h3 FAVOURITE V HEARTBEAT LIVE STAGE OF KPOP STAR
@@ -114,5 +129,8 @@
 									img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 								figcaption
 									h5 TÊN CA SĨ
+									.number-vote
+										p Tổng số lượt
+										p 10
 	.btn.shadow
 		button#btn-vote(data-url="#") BÌNH CHỌN
