--- a/src/components/_layout/_footer.pug
+++ b/src/components/_layout/_footer.pug
@@ -10,7 +10,7 @@ footer
 					li#facebook
 						img.svg(src="./assets/images/icons/facebook.svg", alt="", srcset="")
 					li
-						a.twitter-share-button(href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-text="Cùng than gia sự kiện nhé" data-url="http://vliveawards.com/" data-lang="vi" data-show-count="false")
+						a(href="https://twitter.com/intent/tweet?text=Cùng%20tham%20gia%20sự%20nhé%20http://vliveawards.com/")
 							img.svg(src="./assets/images/icons/twitter.svg", alt="", srcset="")
 					li
 						a(href="#")
