--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -1,5 +1,5 @@
 .index-3
 	figure
 		img.ofc(src="./assets/images/index/banner-2.png", alt="", srcset="")
-		button(data-fancybox href="https://www.youtube.com/watch?v=WsLNIixQE_I")
+		button(data-fancybox href="https://www.vlive.tv/video/164466")
 			img.svg(src="./assets/images/icons/play.svg", alt="")
