--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -1,5 +1,8 @@
 .index-3
 	figure
 		img.ofc(src="./assets/images/index/banner-2.png", alt="", srcset="")
-		button(data-fancybox href="https://www.vlive.tv/video/164466")
+		button(data-fancybox data-src="#popup-video")
 			img.svg(src="./assets/images/icons/play.svg", alt="")
+	.d-none
+		.box-video#popup-video
+			<iframe src='https://www.vlive.tv/embed/164466' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen muted></iframe>
