ajax và đặt tên ca sĩ

--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -34,95 +34,402 @@
 			p Giải thương tôn vinh cộng đồng FANSHIP hoạt động tích cực trên VLIVE
 		.row-wrapper
 			.row.no-gutters.list-vote
-				-for(i=1;i<6;i++)
-					.item-vote(data-value=i)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
-							figcaption
-								h5 TÊN CA SĨ
-								.number-vote
-									p Tỉ lệ bình chọn
-									p 10
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/1.jpg", alt="")
+						figcaption
+							h5 BÍCH PHƯƠNG & SHINE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/2.jpg", alt="")
+						figcaption
+							h5 VŨ CÁT TƯỜNG & FM
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/3.jpg", alt="")
+						figcaption
+							h5 UNI5 & UNI
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/4.jpg", alt="")
+						figcaption
+							h5 SOOBIN & SUSU FAMILY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/5.jpg", alt="")
+						figcaption
+							h5 AMEE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 ARTIST OF THE YEAR
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
 		.row-wrapper
 			.row.no-gutters.list-vote
-				-for(i=1;i<6;i++)
-					.item-vote(data-value=i)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/artist_of_the_year/"+i+".jpg", alt="")
-							figcaption
-								h5 TÊN CA SĨ
-								.number-vote
-									p Tỉ lệ bình chọn
-									p 10
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/artist_of_the_year/1.jpg", alt="")
+						figcaption
+							h5 BÍCH PHƯƠNG
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/artist_of_the_year/2.jpg", alt="")
+						figcaption
+							h5 HƯƠNG GIANG
+							.number-vote
+								p Tỉ lệ bình chọn
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/artist_of_the_year/3.jpg", alt="")
+						figcaption
+							h5 ISSAC
+							.number-vote
+								p Tỉ lệ bình chọn
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
+						figcaption
+							h5 SOOBIN HOÀNG SƠN
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/artist_of_the_year/5.jpg", alt="")
+						figcaption
+							h5 TÊN CA SĨ
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 BEST COMEBACK
 			p Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng, tạo xu hướng trong năm 2019
 		.row-wrapper
 			.row.no-gutters.list-vote
-				-for(i=1;i<6;i++)
-					.item-vote(data-value=i)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/best_come_back/"+i+".jpg", alt="")
-							figcaption
-								h5 TÊN CA SĨ
-								.number-vote
-									p Tỉ lệ bình chọn
-									p 10
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/best_come_back/1.jpg", alt="")
+						figcaption
+							h5 CHI PU
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/best_come_back/2.jpg", alt="")
+						figcaption
+							h5 BIGDADDY & EMILY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/best_come_back/3.jpg", alt="")
+						figcaption
+							h5 Hoàng Thuỳ Linh
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/best_come_back/4.jpg", alt="")
+						figcaption
+							h5 NGÔ KIẾN HUY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/best_come_back/5.jpg", alt="")
+						figcaption
+							h5 TRÚC NHÂN
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
 		.row-wrapper
 			.row.no-gutters.list-vote
-				-for(i=1;i<6;i++)
-					.item-vote(data-value=i)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/"+i+".jpg", alt="")
-							figcaption
-								h5 TÊN CA SĨ
-								.number-vote
-									p Tỉ lệ bình chọn
-									p 10
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/1.jpg", alt="")
+						figcaption
+							h5 K-ICM & JACK
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/2.jpg", alt="")
+						figcaption
+							h5 AMEE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/3.jpg", alt="")
+						figcaption
+							h5 ĐỖ HOÀNG DƯƠNG
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/4.jpg", alt="")
+						figcaption
+							h5 JUKY SAN
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/5.jpg", alt="")
+						figcaption
+							h5 QUÂN A.P
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 GROUP OF THE YEAR
 			p Giải thưởng tôn vinh nhóm nhạc hoạt động xuất sắc trong năm 2019
 		.row-wrapper
 			.row.no-gutters.list-vote
-				-for(i=1;i<5;i++)
-					.item-vote(data-value=i)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/"+i+".jpg", alt="")
-							figcaption
-								h5 TÊN CA SĨ
-								.number-vote
-									p Tỉ lệ bình chọn
-									p 10
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/1.jpg", alt="")
+						figcaption
+							h5 ZERO9
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/2.jpg", alt="")
+						figcaption
+							h5 DALAB
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/3.jpg", alt="")
+						figcaption
+							h5 MONSTAR
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
+						figcaption
+							h5 UNI5
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 V Heartbeat Stage of KPOP
 			p Giải thưởng tôn vinh ca sĩ/ nhóm nhạc KPOP có màn trình diễn được yêu thích trên sân khấu V Heartbeat LIVE trong năm 2019.
 		.row-wrapper
 			.row.no-gutters.list-vote.border-0
-					-for(i=1;i<12;i++)
-						.item-vote(data-value=i)
-							figure
-								.box-img
-									img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/"+i+".jpg", alt="")
-								figcaption
-									h5 TÊN CA SĨ
-									.number-vote
-										p Tỉ lệ bình chọn
-										p 10
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/1.jpg", alt="")
+						figcaption
+							h5 CHUNG HA
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/2.jpg", alt="")
+						figcaption
+							h5 CIX
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
+						figcaption
+							h5 GFRIEND
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/4.jpg", alt="")
+						figcaption
+							h5 HA SUNG WOON
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/5.jpg", alt="")
+						figcaption
+							h5 HYOMIN
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=6)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/6.jpg", alt="")
+						figcaption
+							h5 (G)I-DLE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=7)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
+						figcaption
+							h5 ITZY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=8)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/8.jpg", alt="")
+						figcaption
+							h5 JEONG SEWOON
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=9)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/9.jpg", alt="")
+						figcaption
+							h5 KARD
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=10)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/10.jpg", alt="")
+						figcaption
+							h5 kim jae joong
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=11)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/11.jpg", alt="")
+						figcaption
+							h5 nu'est
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=12)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/12.jpg", alt="")
+						figcaption
+							h5 red velvet
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=13)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/13.jpg", alt="")
+						figcaption
+							h5 snuper
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=14)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/14.jpg", alt="")
+						figcaption
+							h5 super junior
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=15)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/15.jpg", alt="")
+						figcaption
+							h5 the boyz
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=16)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/16.jpg", alt="")
+						figcaption
+							h5 weki meki
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=17)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/17.jpg", alt="")
+						figcaption
+							h5 zico
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.btn.shadow
 		button#btn-vote(data-url="#") BÌNH CHỌN
