--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -212,9 +212,10 @@ body {
 					margin-top: 40px;
 
 					h5 {
-						text-align : center;
-						font-size  : 18px;
-						font-weight: 700;
+						text-align    : center;
+						font-size     : 18px;
+						font-weight   : 700;
+						text-transform: uppercase;
 					}
 
 					.number-vote {
@@ -298,10 +299,12 @@ body {
 		margin-bottom  : 35px;
 
 		label {
-			flex     : 0 0 50%;
-			max-width: 50%;
-			font-size: 18px;
-			color    : #46465A;
+			flex         : 0 0 50%;
+			max-width    : 50%;
+			font-size    : 18px;
+			color        : #46465A;
+			text-align   : right;
+			padding-right: 40px;
 
 			span {
 				color: red;
