--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -34,7 +34,7 @@
 			p Giải thương tôn vinh cộng đồng FANSHIP hoạt động tích cực trên VLIVE
 		.row-wrapper
 			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
+				.item-vote.checked(data-value=1)
 					figure
 						.box-img
 							img.ofc(src="./assets/images/item-vote/vfanship_community/1.jpg", alt="")
@@ -85,7 +85,7 @@
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
 		.row-wrapper
 			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
+				.item-vote.checked(data-value=1)
 					figure
 						.box-img
 							img.ofc(src="./assets/images/item-vote/artist_of_the_year/1.jpg", alt="")
