--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -65,7 +65,6 @@ html(lang="en")
 					img(src="./assets/images/logo.png", alt="", srcset="")
 				.desc
 		block scripts
-		script(async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v5.0&appId=774359209430335&autoLogAppEvents=1")
-		script(async src="https://platform.twitter.com/widgets.js" charset="utf-8")
+		script(async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v5.0&appId=774359209430335" charset="utf-8")
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
