--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -113,6 +113,19 @@ body {
 	display: none;
 }
 
+#facebook {
+	background-image: url(../assets/images/icons/facebook.svg);
+	background-size : cover;
+	width           : 38px;
+	height          : 38px;
+
+	.fb-share-button {
+		opacity: 0 !important;
+		height : 100%;
+		width  : 100%;
+	}
+}
+
 .ofc {
 	width          : 100%;
 	height         : 100%;
@@ -401,6 +414,7 @@ body {
 				flex         : 0 0 100%;
 				max-width    : 100%;
 				margin-bottom: 15px;
+				text-align   : left;
 			}
 
 			.input-group {
