--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -3,37 +3,89 @@
 	position: relative;
 	width   : 100%;
 	height  : 115vh;
-	// figure {
-	// 	height: 100%;
 
-	// 	button {
-	// 		position  : absolute;
-	// 		top       : 50%;
-	// 		left      : 50%;
-	// 		transform : translate(-50%, -50%);
-	// 		background: none;
-	// 		border    : none;
-	// 	}
-	// }
-
-	// @media (max-width: 1024.98px) {
-	// 	height: auto;
-
-	// 	figure {
-	// 		button {
-	// 			svg {
-	// 				width : 50%;
-	// 				height: 50%;
-	// 			}
-	// 		}
-	// 	}
-	// }
-	@media (max-width: 1400px) {
-		height: 97vh;
+	@media (max-width: 1800px) {
+		height: 1010px;
 	}
 
-	@media (max-width: 1024.98px) {
-		height: 69vh;
+	@media (max-width: 1700px) {
+		height: 955px;
+	}
+
+	@media (max-width: 1650px) {
+		height: 925px;
+	}
+
+	@media (max-width: 1600px) {
+		height: 900px;
+	}
+
+	@media (max-width: 1500px) {
+		height: 845px;
+	}
+
+	@media (max-width: 1440px) {
+		height: 810px;
+	}
+
+	@media (max-width: 1330px) {
+		height: 750px;
+	}
+
+	@media (max-width: 1340px) {
+		height: 760px;
+	}
+
+	@media (max-width: 1300px) {
+		height: 730px;
+	}
+
+	@media (max-width:1050px) {
+		height: 595px;
+	}
+
+	@media (max-width: 1100px) {
+		height: 620px;
+	}
+
+	@media (max-width: 1024px) {
+		height: 578px;
+	}
+
+	@media (max-width: 768px) {
+		height: 433px;
+	}
+
+	@media (max-width: 650px) {
+		height: 370px;
+	}
+
+	@media (max-width: 600px) {
+		height: 335px;
+	}
+
+	@media (max-width: 500px) {
+		height: 285px;
+	}
+
+	@media (max-width: 475px) {
+		height: 267px;
+	}
+
+	@media (max-width: 414px) {
+		height: 235px;
+	}
+
+	@media (max-width: 360px) {
+		height: 200px;
+	}
+
+	@media (max-width: 375px) {
+		height: 210px;
+	}
+
+	@media (max-width: 320px) {
+		height: 180px;
 	}
 }
 
