--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -1,3 +1,3 @@
 .index-5
 	figure
-		img.ofc(src="./assets/images/index/banner-5.png", alt="", srcset="")
+		img.ofc(src="./assets/images/index/banner-5.jpg", alt="", srcset="")
