--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -481,3 +481,29 @@
 		}
 	}
 }
+
+.index-5 {
+	position: relative;
+
+	.map-canvas {
+		position: absolute;
+		top     : 0;
+		left    : 0;
+		z-index : 10;
+		width   : 100%;
+		height  : 100%;
+
+		area {
+			cursor: pointer;
+		}
+	}
+
+	.map-image {
+		position: absolute;
+		top     : 0;
+		left    : 0;
+		z-index : 5;
+		width   : 100%;
+		height  : 100%;
+	}
+}
