--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -215,7 +215,7 @@ body {
 						left         : 0;
 						width        : 100%;
 						height       : 100%;
-						border       : 4px solid #ffffff;
+						border       : 5px solid #ffe600;
 						border-radius: 10px;
 						transition   : .3s all ease-in-out;
 					}
@@ -240,9 +240,15 @@ body {
 							font-weight: 700;
 						}
 
-						@media (max-width: 767.98px) {
+						@media (max-width: 1199.98px) {
 							p {
 								font-size: 13px;
+							}
+						}
+
+						@media (max-width: 1024.98px) {
+							p {
+								font-size: 16px;
 							}
 						}
 					}
