--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -1,24 +1,20 @@
 .index-5
-	.imageMapCanvas(style="position: relative")
-		.map-canvas
-			map#imageMap(name='imageMap' )
-				area(shape='circle', coords='1634, 925, 79', href='https://channels.vlive.tv/B0C9CD/home', target='_blank', alt='D1Verse', title='D1Verse')
-				area(shape='circle', coords='1721, 737, 89', href='https://channels.vlive.tv/B51943', target='_blank', alt='Amee', title='Amee')
-				area(shape='circle', coords='1482, 787, 106', href='https://channels.vlive.tv/DF1403/home', target='_blank', alt='Uni5', title='Uni5')
-				area(shape='circle', coords='1209, 822, 102', href='https://channels.vlive.tv/D3C56D', target='_blank', alt='Gin Tuấn Kiệt', title='Gin Tuấn Kiệt')
-				area(shape='circle', coords='128, 828, 87', target='_blank', alt='Zero9', title='Zero9')
-				area(shape='circle', coords='301, 925, 79', href='https://channels.vlive.tv/CA369F/home', target='_blank', alt='Jin Ju', title='Jin Ju')
-				area(shape='circle', coords='406, 739, 109', target='_blank', alt='Trọng Hiếu', title='Trọng Hiếu')
-				area(shape='circle', coords='650, 808, 118', href='https://channels.vlive.tv/A94ABD', target='_blank', alt='Jack KICM', title='Jack KICM')
-				area(shape='circle', coords='200, 618, 108', href='https://channels.vlive.tv/F0A1D1/home', target='_blank', alt='Monstar', title='Monstar')
-				area(shape='circle', coords='1670, 543, 92', href='https://channels.vlive.tv/D6D50B', target='_blank', alt='Han Sara', title='Han Sara')
-				area(shape='circle', coords='1401, 518, 152', href='https://channels.vlive.tv/F071D7/home', target='_blank', alt='Huyna', title='Huyna')
-				area(shape='circle', coords='1588, 257, 147', href='https://channels.vlive.tv/F81E3/home', target='_blank', alt='Ngô Kiến Huy', title='Ngô Kiến Huy')
-				area(shape='circle', coords='1273, 169, 144', href='https://channels.vlive.tv/DB2481', target='_blank', alt='Vũ Cát Tường', title='Vũ Cát Tường')
-				area(shape='circle', coords='187, 339, 119', href='https://channels.vlive.tv/AA1AA3', target='_blank', alt='Nguyễn Trần Trung Quân', title='Nguyễn Trần Trung Quân')
-				area(shape='circle', coords='471, 453, 152', href='https://channels.vlive.tv/F0A1D1/home', target='_blank', alt='Monstar', title='Monstar')
-				area(shape='circle', coords='606, 167, 148', target='_blank', alt='Hoàng Thuỳ Linh', title='Hoàng Thuỳ Linh')
-			canvas
-		.map-image
-			figure
-				img.ofc#map-image(src='./assets/images/index/banner-5.jpg', alt='', usemap='#imageMap')
+	map(name='map')
+		area(shape='circle', coords='127, 828, 86', href='https://channels.vlive.tv/CCC64D', target='_blank', alt='Zero9', title='Zero9')
+		area(shape='circle', coords='300, 925, 81', href='https://channels.vlive.tv/CA369F/home', target='_blank', alt='Jin Ju', title='Jin Ju')
+		area(shape='circle', coords='650, 807, 117', href='https://channels.vlive.tv/A94ABD', target='_blank', alt='Jack KICM', title='Jack KICM')
+		area(shape='circle', coords='405, 737, 107', target='_blank', alt='Trọng Hiếu', title='Trọng Hiếu')
+		area(shape='circle', coords='200, 619, 106', href='https://channels.vlive.tv/F0A1D1/home', target='_blank', alt='Monstar', title='Monstar')
+		area(shape='circle', coords='188, 338, 120', href='https://channels.vlive.tv/AA1AA3', target='_blank', alt='Nguyễn Trần Trung Quân', title='Nguyễn Trần Trung Quân')
+		area(shape='circle', coords='472, 456, 151', href='https://channels.vlive.tv/FE123', target='_blank', alt='Monsta X', title='Monsta X')
+		area(shape='circle', coords='1208, 820, 102', href='https://channels.vlive.tv/D3C56D', target='_blank', alt='Gin Tuấn Kiệt', title='Gin Tuấn Kiệt')
+		area(shape='circle', coords='1482, 788, 107', href='https://channels.vlive.tv/DF1403/home', target='_blank', alt='Uni5', title='Uni5')
+		area(shape='circle', coords='1632, 926, 79', href='https://channels.vlive.tv/B0C9CD/home', target='_blank', alt='D1Verse', title='D1Verse')
+		area(shape='circle', coords='1723, 735, 89', href='https://channels.vlive.tv/B51943', target='_blank', alt='Amee', title='Amee')
+		area(shape='circle', coords='1671, 544, 92', href='https://channels.vlive.tv/D6D50B', target='_blank', alt='Han Sara', title='Han Sara')
+		area(shape='circle', coords='1403, 519, 151', href='https://channels.vlive.tv/F071D7', target='_blank', alt='Huyna', title='Huyna')
+		area(shape='circle', coords='1589, 257, 147', href='https://channels.vlive.tv/F81E3/home', target='_blank', alt='Ngô Kiến Huy', title='Ngô Kiến Huy')
+		area(shape='circle', coords='1275, 168, 144', href='https://channels.vlive.tv/DB2481', target='_blank', alt='Vũ Cát Tường', title='Vũ Cát Tường')
+		area(shape='circle', coords='603, 169, 148', target='_blank', alt='Hoàng Thuỳ Linh', title='Hoàng Thuỳ Linh')
+	.map-image
+		img#map-image(src='./assets/images/index/banner-5.jpg', alt='', usemap='#map')
