--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -64,7 +64,7 @@ html(lang="en")
 				.logo
 					img(src="./assets/images/logo.png", alt="", srcset="")
 				.desc
-		input#checkLogin(type='text' hidden value='false')
+		input#checkLogin(type='text' hidden value='true')
 		.d-none
 			.form-thank#auto-login(url-redirect="/")
 				.logo
