--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -13,7 +13,7 @@
 							li Mỗi fan được bình chọn 1 lần 1 ngày.
 							li Những fan tham gia FANSHIP của bất kì nghệ sĩ nào trong danh sách đề cử, được bình chọn tối đa 2 lần 1 ngày.
 							li 1 ngày được tính từ 00:00:01 tới 23:59:59.
-							li Thời gian bình chọn: Từ 09/12/2019 tới hết ngày 29/12/2019
+							li Thời gian bình chọn: Từ 10/12/2019 tới hết ngày 29/12/2019
 			.block-item
 				.item
 					.content
@@ -70,6 +70,114 @@
 							.number-vote
 								p Tỉ lệ bình chọn
 								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/5.jpg", alt="")
+						figcaption
+							h5 AMEE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=6)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/6.jpg", alt="")
+						figcaption
+							h5 ZERO9 & CIRLE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=7)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/7.jpg", alt="")
+						figcaption
+							h5 D1VERSE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=8)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/8.jpg", alt="")
+						figcaption
+							h5 ĐỨC PHÚC & SUN
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=9)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/9.jpg", alt="")
+						figcaption
+							h5 GIN TUẤN KIỆT & GINIOUS
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=10)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/10.jpg", alt="")
+						figcaption
+							h5 NOO PHƯỚC THỊNH & NOO CON FAMILY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=11)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/11.jpg", alt="")
+						figcaption
+							h5 HƯƠNG GIANG FERCON
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=12)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/12.jpg", alt="")
+						figcaption
+							h5 VỢ CHỒNG BÁ ĐẠO
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=13)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/13.jpg", alt="")
+						figcaption
+							h5 MONSTAR & MOONEE
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=14)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/14.jpg", alt="")
+						figcaption
+							h5 NGÔ KIẾN HUY & BẮP FAMILY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=15)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/15.jpg", alt="")
+						figcaption
+							h5 HAN SARA & KIM CHI
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=16)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/vfanship_community/16.jpg", alt="")
+						figcaption
+							h5 QUỐC TRƯỜNG
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 ARTIST OF THE YEAR
@@ -98,7 +206,7 @@
 						.box-img
 							img.ofc(src="./assets/images/item-vote/artist_of_the_year/3.jpg", alt="")
 						figcaption
-							h5 ISSAC
+							h5 ISAAC
 							.number-vote
 								p Tỉ lệ bình chọn
 				.item-vote(data-value=4)
@@ -107,15 +215,6 @@
 							img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
 						figcaption
 							h5 SOOBIN HOÀNG SƠN
-							.number-vote
-								p Tỉ lệ bình chọn
-								p 10
-				.item-vote(data-value=5)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/artist_of_the_year/5.jpg", alt="")
-						figcaption
-							h5 TÊN CA SĨ
 							.number-vote
 								p Tỉ lệ bình chọn
 								p 10
