--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -66,7 +66,7 @@ html(lang="en")
 				.desc
 		input#checkLogin(type='text' hidden value='true')
 		.d-none
-			.form-thank#auto-login(url-redirect="/")
+			.form-thank#auto-login(url-redirect="#")
 				.logo
 					img(src="./assets/images/logo.png", alt="", srcset="")
 				.desc
