--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -110,6 +110,57 @@
 							.number-vote
 								p Tỉ lệ bình chọn
 								p 10
+				.item-vote(data-value=5)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/best_come_back/5.jpg", alt="")
+						figcaption
+							h5 NGÔ KIẾN HUY
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+	.container.block-vote
+		.title
+			h3 GROUP OF THE YEAR
+			p Giải thưởng tôn vinh nhóm nhạc hoạt động xuất sắc trong năm 2019
+		.row-wrapper
+			.row.no-gutters.list-vote
+				.item-vote(data-value=1)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/1.jpg", alt="")
+						figcaption
+							h5 ZERO9
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=2)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/2.jpg", alt="")
+						figcaption
+							h5 DALAB
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=3)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/3.jpg", alt="")
+						figcaption
+							h5 MONSTAR
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
+				.item-vote(data-value=4)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
+						figcaption
+							h5 UNI5
+							.number-vote
+								p Tỉ lệ bình chọn
+								p 10
 	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
@@ -158,48 +209,6 @@
 							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/5.jpg", alt="")
 						figcaption
 							h5 QUÂN A.P
-							.number-vote
-								p Tỉ lệ bình chọn
-								p 10
-	.container.block-vote
-		.title
-			h3 GROUP OF THE YEAR
-			p Giải thưởng tôn vinh nhóm nhạc hoạt động xuất sắc trong năm 2019
-		.row-wrapper
-			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/1.jpg", alt="")
-						figcaption
-							h5 ZERO9
-							.number-vote
-								p Tỉ lệ bình chọn
-								p 10
-				.item-vote(data-value=2)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/2.jpg", alt="")
-						figcaption
-							h5 DALAB
-							.number-vote
-								p Tỉ lệ bình chọn
-								p 10
-				.item-vote(data-value=3)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/3.jpg", alt="")
-						figcaption
-							h5 MONSTAR
-							.number-vote
-								p Tỉ lệ bình chọn
-								p 10
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
-						figcaption
-							h5 UNI5
 							.number-vote
 								p Tỉ lệ bình chọn
 								p 10
