--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -97,7 +97,9 @@
 						.box-img
 							img.ofc(src="./assets/images/item-vote/best_come_back/3.jpg", alt="")
 						figcaption
-							h5 Hoàng Thuỳ Linh
+							h5 để mị nói cho mà nghe
+								br
+								| Hoàng Thuỳ Linh
 							.number-vote
 								p Tỉ lệ bình chọn
 								p 10
