--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -495,11 +495,28 @@
 }
 
 .index-5 {
-	area {
-		cursor: pointer;
+	.iamgeMapCanvas {
+		position: relative;
+
+		.image-canvas {
+			position: absolute;
+			top     : 0;
+			left    : 0;
+			width   : 100%;
+			height  : 100%;
+			z-index : 2;
+		}
+		.image-map{
+			position: relative;
+			z-index: 3;
+		}
 	}
 
-	@media (max-width: 1440px) {
-		pointer-events: none;
+	map {
+		width: 100%;
+	}
+
+	area {
+		cursor: pointer;
 	}
 }
